# Spam-Detector

./: .gitignore  README.md  main.ipynb  pyproject.toml
server/: api.py  predict.py  tokenizer.py  utils.py
server/models/: prediction.py
